Adicionando Migration para pagamento ao Pedido
