# api/app/controllers/pedidos_controller.rb
@@ -119,6 +119,6 @@ class PedidosController < ApplicationController
 
     # Only allow a list of trusted parameters through.
     def pedido_params
-      params.require(:pedido).permit(:cliente_id, :produtos, :valor, :status, :observacao, , :pagamento)
+      params.require(:pedido).permit(:cliente_id, :produtos, :valor, :status, :observacao, :pagamento)
     end
 end
