# api/db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.1].define(version: 2024_07_28_192121) do
+ActiveRecord::Schema[7.1].define(version: 2024_07_31_215522) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
 
@@ -42,6 +42,7 @@ ActiveRecord::Schema[7.1].define(version: 2024_07_28_192121) do
     t.text "observacao"
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
+    t.string "pagamento"
     t.index ["cliente_id"], name: "index_pedidos_on_cliente_id"
   end
 
